	  easier to provide the unscrambled version.
	  The unscrambled uploading and addition of xor 0x55 will make it easy for
	  others to implement their own EC2 firmware.
	- updated firmware tools docs and provide new .raw images.
	- added command lines options to ec2readfw to allow reading the debuggers
	  entire code memory or just the firmware locations.
	- Prevented spurious Failed to halt message from flash write code.
	- modified all tools so that a disconnect is performed on failure or CTRL-C
	  This is to reduce the liklehood of destroying a micro in C2 mode at the
	  next reconnect (only seemed to be a problem on C2).
	- updated ec2writeflash / ec2readflash to support >64k
	- Updated Max firmware versions to EC3 = 0x0c, EC2 = 0x14 as these seem good
	- Added Fixes for library files not including .so reported by Sean Collins.
	  http://sourceforge.net/forum/forum.php?thread_id=1668047&forum_id=499982
	- Detect and report presense of but lack of access rights to an EC3,
	  suggesting try as root or setup udev.
	- Add code to support F35x (Paged debug sfr's)
	  (general paged sfr support for c2 mode)

Henri Geist:
	- bugfix for ec2drv serial communications, to avoid missing part of the read
	  data when only a part of them has arrived at time of the read syscall
	  on the serial port.

Kolja Waschk:
	- EC2/3 Bootloader Read firmware function now fixed. (incorrect byte order
	  in address.
	- Routine to match the checksum/CRC that the EC2/3 calculated on a page of
	  memory.
	- Provided basic read debugger firmware utility.

Nebojša:
	- Allow compilation with GCC 4.1

Thomas Sailer:
	- Patch containing large number of warning fixes for GCC4

Marco Oesch:
	- Correct EC2 Firmware size for ec2rfw.c, also ensure entire debugger read
	  size set correctly.


Known issues:
	- If the device is locked reads from RAM and FLASH return 0x00 rather than
	  reporting an error

TODO:
	- choose correct clock and flash scale values for each processor.

